--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
     <title>Chase Allen</title>
   </head>
-  <body>
+  <body style="height: 100vh">
     <noscript>Please enable JavaScript to run this app.</noscript>
 
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
   </body>
 </html>
