--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>Chase Allen</title>
   </head>
   <body style="height: 100vh">
-    <noscript>Please enable JavaScript to run this app.</noscript>
+    <noscript>Please enable JavaScript.</noscript>
 
     <div id="root" style="height: 100%"></div>
   </body>
